--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VUE_APP_BASE_API_URL="http://backend-todo-assignment-mbakin.herokuapp.com"
+VUE_APP_BASE_API_URL="https://backend-todo-assignment-mbakin.herokuapp.com"
